Closed
Bug 649103
Opened 14 years ago
Closed 14 years ago
TI: Assertion failure: lastBinding
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
Attachments
(1 file)
10.48 KB,
text/plain
|
Details |
I am able to reproduce this tinderbox assert with my own browser build (debug, 32-bit, OS X). The first time I started the browser it did not assert but it crashed when I visited some website (tbpl.mozilla.org I think). Next time I started the browser I got this assert.
Attached is a gdb debug session. Let me know if you need more information.
Reporter | ||
Comment 1•14 years ago
|
||
STR:
1) Start firefox-bin
2) Send SIGQUIT (on OS X: killall -QUIT firefox-bin)
3) Next time I start the browser I always get this assert
(SIGKILL instead of SIGQUIT does not work)
Comment 2•14 years ago
|
||
Cool, thanks for the stack.
I still can't repro this, but from the behavior you're seeing I'm guessing the problem is with XDR'ed scripts, and looking at how those are decoded we do not ensure that decoded scripts have a binding if they have no local names. This *should* fix things.
http://hg.mozilla.org/projects/jaegermonkey/rev/752402c11d02
Comment 3•14 years ago
|
||
This looks fixed on tinderbox.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•