[INFER] Always ensure XDR'd scripts have a shape, bug 649103.